@@ -10,6 +10,7 @@ Bugs fixed:
 - 1525280 Fixed segfaults when linking with sfcc
 - 1529096 Fixed unusable execution timing traces
 - 1567620 Ensure lower provider process limit
+- 1567676 Fixed several memory leaks
 
 Changes in 1.1.1
 ================
